TablaDeSimbolos/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TEXTO

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     empty -> <empty>
Rule 2     C -> MENOR
Rule 3     C -> MAYOR
Rule 4     C -> MENOR_IGUAL
Rule 5     C -> MAYOR_IGUAL
Rule 6     C -> IGUAL
Rule 7     C -> DIFERENTE
Rule 8     E -> E2
Rule 9     E -> E2 C E2
Rule 10    E2 -> E3
Rule 11    E2 -> E2 OR E3
Rule 12    E2 -> E2 MAS E3
Rule 13    E2 -> E2 MENOS E3
Rule 14    E3 -> E4
Rule 15    E3 -> E3 AND E4
Rule 16    E3 -> E3 POR E4
Rule 17    E3 -> E3 ENTRE E4
Rule 18    E3 -> E3 MODULO E4
Rule 19    E4 -> T
Rule 20    E4 -> NOT T
Rule 21    T -> PARENTESIS_IZQUIERDO E PARENTESIS_DERECHO
Rule 22    T -> FUNCTION
Rule 23    T -> ID_COMPLETO
Rule 24    T -> VALOR_INT
Rule 25    T -> VALOR_FLOAT
Rule 26    ID_COMPLETO -> ID RANGOS
Rule 27    RANGOS -> empty
Rule 28    RANGOS -> CORCHETE_IZQUIERDO VALOR_INT CORCHETE_DERECHO RANGOS
Rule 29    V -> TIPO DOS_PUNTOS A PUNTO_COMA
Rule 30    V -> TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
Rule 31    TIPO -> INT
Rule 32    TIPO -> FLOAT
Rule 33    V_M -> empty
Rule 34    V_M -> V V_M
Rule 35    A -> ID_COMPLETO ASIGNACION VALOR_INT
Rule 36    A -> ID_COMPLETO ASIGNACION VALOR_FLOAT
Rule 37    A -> ID_COMPLETO ASIGNACION E
Rule 38    A -> ID_COMPLETO ASIGNACION ID_COMPLETO
Rule 39    A -> ID_COMPLETO ASIGNACION ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
Rule 40    A -> ID_COMPLETO ASIGNACION INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
Rule 41    EST -> empty
Rule 42    EST -> LOOP_ END LOOP PUNTO_COMA EST
Rule 43    EST -> IF_ END IF PUNTO_COMA EST
Rule 44    EST -> A PUNTO_COMA EST
Rule 45    EST -> PROCEDURE PUNTO_COMA EST
Rule 46    EST -> FUNCTION PUNTO_COMA EST
Rule 47    EST -> PRINT PARENTESIS_IZQUIERDO COMILLAS COMILLAS PARENTESIS_DERECHO PUNTO_COMA EST
Rule 48    EST -> INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
Rule 49    EST -> ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
Rule 50    LOOP_ -> DO_WHILE
Rule 51    LOOP_ -> WHILE_
Rule 52    LOOP_ -> FOR_
Rule 53    DO_WHILE -> DO DOS_PUNTOS EST WHILE E PUNTO_COMA
Rule 54    WHILE_ -> WHILE E DOS_PUNTOS EST
Rule 55    FOR_ -> FOR EST E EST DOS_PUNTOS EST
Rule 56    IF_ -> IF E DOS_PUNTOS EST ELSIF_
Rule 57    ELSIF_ -> END IF PUNTO_COMA
Rule 58    ELSIF_ -> ELSE DOS_PUNTOS EST END IF PUNTO_COMA
Rule 59    ELSIF_ -> ELSIF DOS_PUNTOS E EST ELSIF_
Rule 60    P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
Rule 61    P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
Rule 62    F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
Rule 63    MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
Rule 64    MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
Rule 65    PROGRAMA -> MP PROGRAMA_H
Rule 66    PROGRAMA_H -> empty
Rule 67    PROGRAMA_H -> P PROGRAMA_H
Rule 68    PROGRAMA_H -> F PROGRAMA_H

Terminals, with rules where they appear

AND                  : 15
ASIGNACION           : 35 36 37 38 39 40
BEGIN                : 60 61 62 63 64
COMILLAS             : 47 47
CORCHETE_DERECHO     : 28
CORCHETE_IZQUIERDO   : 28
DIFERENTE            : 7
DO                   : 53
DOS_PUNTOS           : 29 30 53 54 55 56 58 59 60 61 62 63 64
ELSE                 : 58
ELSIF                : 59
END                  : 42 43 57 58 60 61 62 63 64
ENTRE                : 17
FLOAT                : 32
FOR                  : 55
FUNCTION             : 22 46 62
ID                   : 26 39 49 60 61 62 62
IF                   : 43 56 57 58
IGUAL                : 6
INPUT                : 40 48
INT                  : 31
LOOP                 : 42
MAIN                 : 63 64
MAS                  : 12
MAYOR                : 3
MAYOR_IGUAL          : 5
MENOR                : 2
MENOR_IGUAL          : 4
MENOS                : 13
MODULO               : 18
NOT                  : 20
OR                   : 11
PARENTESIS_DERECHO   : 21 39 40 47 48 49 60 61 62 63 64
PARENTESIS_IZQUIERDO : 21 39 40 47 48 49 60 61 62 63 64
POR                  : 16
PRINT                : 47
PROCEDURE            : 45 60 60 61 61 63 63 64 64
PUNTO_COMA           : 29 30 42 43 44 45 46 47 48 49 53 57 58 60 60 61 61 61 62 62 62 63 63 64 64 64
RETURN               : 61 62 64
TEXTO                : 
VALOR_FLOAT          : 25 36
VALOR_INT            : 24 28 35
WHILE                : 53 54
error                : 

Nonterminals, with rules where they appear

A                    : 29 44
C                    : 9
DO_WHILE             : 50
E                    : 21 37 53 54 55 56 59
E2                   : 8 9 9 11 12 13
E3                   : 10 11 12 13 15 16 17 18
E4                   : 14 15 16 17 18
ELSIF_               : 56 59
EST                  : 42 43 44 45 46 47 48 49 53 54 55 55 55 56 58 59 60 61 62 63 64
F                    : 68
FOR_                 : 52
ID_COMPLETO          : 23 30 35 36 37 38 38 39 40
IF_                  : 43
LOOP_                : 42
MP                   : 65
P                    : 67
PROGRAMA             : 0
PROGRAMA_H           : 65 67 68
RANGOS               : 26 28
T                    : 19 20
TIPO                 : 29 30 62
V                    : 34
V_M                  : 34 60 61 62 63 64
WHILE_               : 51
empty                : 27 33 41 66

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (65) PROGRAMA -> . MP PROGRAMA_H
    (63) MP -> . PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (64) MP -> . PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PROCEDURE       shift and go to state 3

    PROGRAMA                       shift and go to state 1
    MP                             shift and go to state 2

state 1

    (0) S' -> PROGRAMA .



state 2

    (65) PROGRAMA -> MP . PROGRAMA_H
    (66) PROGRAMA_H -> . empty
    (67) PROGRAMA_H -> . P PROGRAMA_H
    (68) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (60) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (61) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (62) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (31) TIPO -> . INT
    (32) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    PROGRAMA_H                     shift and go to state 4
    empty                          shift and go to state 5
    P                              shift and go to state 6
    F                              shift and go to state 7
    TIPO                           shift and go to state 9

state 3

    (63) MP -> PROCEDURE . MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (64) MP -> PROCEDURE . MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    MAIN            shift and go to state 12


state 4

    (65) PROGRAMA -> MP PROGRAMA_H .

    $end            reduce using rule 65 (PROGRAMA -> MP PROGRAMA_H .)


state 5

    (66) PROGRAMA_H -> empty .

    $end            reduce using rule 66 (PROGRAMA_H -> empty .)


state 6

    (67) PROGRAMA_H -> P . PROGRAMA_H
    (66) PROGRAMA_H -> . empty
    (67) PROGRAMA_H -> . P PROGRAMA_H
    (68) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (60) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (61) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (62) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (31) TIPO -> . INT
    (32) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    P                              shift and go to state 6
    PROGRAMA_H                     shift and go to state 13
    empty                          shift and go to state 5
    F                              shift and go to state 7
    TIPO                           shift and go to state 9

state 7

    (68) PROGRAMA_H -> F . PROGRAMA_H
    (66) PROGRAMA_H -> . empty
    (67) PROGRAMA_H -> . P PROGRAMA_H
    (68) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (60) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (61) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (62) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (31) TIPO -> . INT
    (32) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    F                              shift and go to state 7
    PROGRAMA_H                     shift and go to state 14
    empty                          shift and go to state 5
    P                              shift and go to state 6
    TIPO                           shift and go to state 9

state 8

    (60) P -> PROCEDURE . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (61) P -> PROCEDURE . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    ID              shift and go to state 15


state 9

    (62) F -> TIPO . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    ID              shift and go to state 16


state 10

    (31) TIPO -> INT .

    ID              reduce using rule 31 (TIPO -> INT .)
    DOS_PUNTOS      reduce using rule 31 (TIPO -> INT .)


state 11

    (32) TIPO -> FLOAT .

    ID              reduce using rule 32 (TIPO -> FLOAT .)
    DOS_PUNTOS      reduce using rule 32 (TIPO -> FLOAT .)


state 12

    (63) MP -> PROCEDURE MAIN . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (64) MP -> PROCEDURE MAIN . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 17


state 13

    (67) PROGRAMA_H -> P PROGRAMA_H .

    $end            reduce using rule 67 (PROGRAMA_H -> P PROGRAMA_H .)


state 14

    (68) PROGRAMA_H -> F PROGRAMA_H .

    $end            reduce using rule 68 (PROGRAMA_H -> F PROGRAMA_H .)


state 15

    (60) P -> PROCEDURE ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (61) P -> PROCEDURE ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 18


state 16

    (62) F -> TIPO ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 19


state 17

    (63) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (64) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 20


state 18

    (60) P -> PROCEDURE ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (61) P -> PROCEDURE ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 21


state 19

    (62) F -> TIPO ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 22


state 20

    (63) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (64) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    DOS_PUNTOS      shift and go to state 23


state 21

    (60) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (61) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    DOS_PUNTOS      shift and go to state 24


state 22

    (62) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    DOS_PUNTOS      shift and go to state 25


state 23

    (63) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (64) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (33) V_M -> . empty
    (34) V_M -> . V V_M
    (1) empty -> .
    (29) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (30) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (31) TIPO -> . INT
    (32) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    V_M                            shift and go to state 26
    empty                          shift and go to state 27
    V                              shift and go to state 28
    TIPO                           shift and go to state 29

state 24

    (60) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (61) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (33) V_M -> . empty
    (34) V_M -> . V V_M
    (1) empty -> .
    (29) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (30) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (31) TIPO -> . INT
    (32) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    V_M                            shift and go to state 30
    empty                          shift and go to state 27
    V                              shift and go to state 28
    TIPO                           shift and go to state 29

state 25

    (62) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (33) V_M -> . empty
    (34) V_M -> . V V_M
    (1) empty -> .
    (29) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (30) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (31) TIPO -> . INT
    (32) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    TIPO                           shift and go to state 29
    V_M                            shift and go to state 31
    empty                          shift and go to state 27
    V                              shift and go to state 28

state 26

    (63) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (64) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    BEGIN           shift and go to state 32


state 27

    (33) V_M -> empty .

    BEGIN           reduce using rule 33 (V_M -> empty .)


state 28

    (34) V_M -> V . V_M
    (33) V_M -> . empty
    (34) V_M -> . V V_M
    (1) empty -> .
    (29) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (30) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (31) TIPO -> . INT
    (32) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    V                              shift and go to state 28
    V_M                            shift and go to state 33
    empty                          shift and go to state 27
    TIPO                           shift and go to state 29

state 29

    (29) V -> TIPO . DOS_PUNTOS A PUNTO_COMA
    (30) V -> TIPO . DOS_PUNTOS ID_COMPLETO PUNTO_COMA

    DOS_PUNTOS      shift and go to state 34


state 30

    (60) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (61) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    BEGIN           shift and go to state 35


state 31

    (62) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    BEGIN           shift and go to state 36


state 32
